--- a/DopodCinema/SupportFiles/Info.plist
+++ b/DopodCinema/SupportFiles/Info.plist
@@ -8,6 +8,7 @@
 		<string>Poppins-Medium.otf</string>
 		<string>Inter-Regular.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
+		<string>Poppins-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
